# PestoFish2

./: .$ChessGame.drawio.bkp  .gitignore  .gitmodules  6x8x8_full (restart 104).weights.h5  ChessGame.drawio  README.md  globals.py  m.keras  main.py  requirements.txt  runtests.py
UML plans/: ChessGame.drawio
assets/: assets.py
board/: State_Manager.py  abstract_state.py  board.py  decorators.py  promotion.py
builders/min-test/: main.py
builders/network/: .gitignore  code_maps.py  notes.md  trainer.py  transformers.py
builders/open-db/: .gitignore  createDB.py  final.db  parser.py  plan.md  txtToPos.py
builders/piece-square/: counter.py  normalizer.py  subtractor.py
cEngine/: CMakeLists.txt  library.cpp  library.h
cEngine/include/: Board.h  Board.ixx  Engine.h  Engine.ixx  Evaluator.ixx  Move.h  Move.ixx  State.ixx  Types.h  Types.ixx  Utils.h  Utils.ixx
cEngine/pybind/: bindings.cpp
cEngine/src/: Board.cpp  Engine.cpp  Evaluator.cpp  Move.cpp  State.cpp  Utils.cpp
cEngine/test/: RunTests.cpp  TestMove.cpp  TestPreft.cpp  TestState.cpp  testBoard.ixx  testBoards.cpp  testBoards.h  testBoards.ixx
constants/: globals.py  move_set_functions.py  move_sets.py
engine/: engine.py
engine/src/: Engine.py  EngineRunner.py  Enginep.py  engine.py  generator.py
engine/tests/: engine_get_best_move.py  engine_is_terminal_tests.py  engine_result_tests.py  engine_tests.py  engine_value_tests.py  generator_tests.py  moves_tests.py  searcher_tests.py
game/: State_Manager.py  decorators.py  end_state.py  play_state.py  start_state.py
game/assets/: assets.py
game/constants/: globals.py  move_set_functions.py  move_sets.py
game/game_states/: AbstractState.py  EndState.py  PlayState.py  StartState.py  StateManager.py  State_Manager.py  abstract_state.py  decorators.py  end_state.py  play_state.py  promotion.py  start_state.py
game/pieces/: AbstractPiece.py  EnPassent.py  abstract_piece.py  black_pieces.py  en_passent.py  white_pieces.py
pieces/: abstract_piece.py  black_pieces.py  en_passent.py  move_sets.py  white_pieces.py
plans and notes/: chess_board.mdp  lang_sources.md  stability.mdp
plans and notes/UML plans/: .$Chess Engine.drawio.bkp  .$ChessGame.drawio.bkp  .$poster.drawio.bkp  Chess Engine.drawio  ChessGame.drawio  poster.drawio
plans and notes/reaserch (chess)/: Sources to Explore.md  lang_sources.md
plans and notes/reaserch (technical)/: Learning to Evaluate Chess Positions with Deep Neural Networks and Limited Lookahead.md  Neural Networks for Chess The magic of deep and reinforcement learning revealed.md  Stock Reduction A Shallow Implementation of a Classical Chess Engine.md  Training a Convolutional Neural Network to Evaluate Chess Positions.md  lang_sources.md
plans and notes/reaserch notes/: Sources to Explore.md
reaserch/: Artificial Intelligence A modern Approach.md
reaserch notes/: Artificial Intelligence A modern Approach.md  Artificial intelligence by example develop machine intelligence from scratch using real artificial intelligence use cases.md  GoFish A customizable open-source chess engine in Go.md  Introduction to Artificial Intelligence.md  Sources to Explore.md  Summary.md
reaserch notes/.obsidian/: workspace.json
reaserch notes/Books/: Introduction to Artificial Intelligence.md
scripts/: createsmall.py  default_map.py  helpers.py  pgn_parser.py
(+68 files in other folders)
